--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <header>
-        <a class="logo" href="/">News Demo</a>
+        <a class="logo" href="/">Sam News Demo</a>
         <form action="/search" method="GET">
           <input
             autofocus
